--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ h1.title {
   font-weight: 200;
   letter-spacing: 9px;
   margin-bottom: 0;
-  padding-top: 25px;
-  padding-bottom: 30px;
+  padding: 25px 10px 30px 0px;
   text-align: right;
 }
 
@@ -20,9 +19,6 @@ span.title-app {
   letter-spacing: 2px;
   font-style: normal;
   font-weight: 400;
-}
-
-div.header {
 }
 
 div.body {
@@ -34,7 +30,7 @@ form.search-form {
 }
 
 .city-box {
-  border: solid 1px lightblue;
+  border: solid 1px black;
   border-radius: 6px;
   font-weight: 300;
   padding: 5px;
@@ -111,6 +107,7 @@ ul {
 }
 
 div.forecast {
+  background-color: darkcyan;
   color: black;
   font-weight: 300;
   margin-top: 0;
@@ -139,7 +136,6 @@ span.future-temp {
   border: 2px solid black;
   border-radius: 10px;
   margin-top: 20px;
-  padding: 0 15px 0 15px;
 }
 
 .weather-forecast-date {
