--- a/style.css
+++ b/style.css
@@ -87,19 +87,20 @@ div.current-temp {
   display: inline;
   font-size: 130px;
   font-weight: 400;
+  padding-right: 0px;
 }
 
 span.current-temp-units {
-  font-size: 46px;
+  font-size: 43px;
   font-weight: 600;
   position: relative;
-  top: -58px;
+  top: -62px;
 }
 
 .main-icon {
   position: relative;
   bottom: -40px;
-  left: -20px;
+  left: -10px;
 }
 
 ul {
@@ -107,6 +108,7 @@ ul {
   font-weight: 300;
   line-height: 1.8rem;
   list-style-type: none;
+  padding-left: 22px;
   padding-top: 39px;
   text-align: right;
 }
