--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ div.city-col {
 }
 
 h2.city {
-  color: black;
   font-size: 33px;
   font-weight: 300;
   margin-bottom: 0;
@@ -77,7 +76,7 @@ h2.city {
 }
 
 h5.date-time {
-  color: black;
+  color: #e85b48;
   font-size: 21px;
   font-weight: 300;
   text-align: left;
